--- a/day1.html
+++ b/day1.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Hello</h1>
     <h1>Hello World</h1>
     <h2>Day 1 Lessons</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit minus voluptatem ratione vitae consequatur non ipsam molestias beatae asperiores accusantium natus, doloremque at alias? Laborum totam maiores vero officiis eligendi!</p>
