--- a/day2.html
+++ b/day2.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Second Para Quis, reiciendis maxime. Dolorem, tempora itaque eligendi aspernatur deserunt officiis recusandae veniam accusamus eum voluptate dignissimos, temporibus numquam nostrum autem perspiciatis dolore.</p>
+    <p>Third Para Quis, reiciendis maxime. Dolorem, tempora itaque eligendi aspernatur deserunt officiis recusandae veniam accusamus eum voluptate dignissimos, temporibus numquam nostrum autem perspiciatis dolore.</p>
 </body>
 </html>
